--- a/LearningWPF/View/RecipeView.xaml
+++ b/LearningWPF/View/RecipeView.xaml
@@ -6,24 +6,52 @@
              xmlns:local="clr-namespace:LearningWPF.View"
              mc:Ignorable="d" 
              d:DesignHeight="669" d:DesignWidth="894">
-    <Grid DataContext="{Binding SelectedRecipe}">
+    <Grid Visibility="{Binding SelectedRecipe, Converter={StaticResource SelectedRecipeConverter}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="4*"/>
         </Grid.RowDefinitions>
-        <Label Content="{Binding NameRecipe, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox Text="{Binding NameRecipe, UpdateSourceTrigger=PropertyChanged}" Visibility="Collapsed"/>
+        <TextBox Text="{Binding SelectedRecipe.NameRecipe}" 
+                Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
+                 HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
+                />
+        <Label Content="{Binding SelectedRecipe.NameRecipe}"
+               HorizontalAlignment="Center" VerticalAlignment="Center"
+               FontSize="20" FontFamily="Arial"
+               Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
         <Grid Grid.Row="1" Background="White">
-            <Button Click="AddImage">
-                <Image x:Name="Image1" Grid.Row="1" Source="Снимок экрана (6).png" />
+            <Image Grid.Row="1" Source="/LearningWPF;component/Resourse/image--v2.png"/>
+            <Button Style="{DynamicResource AddImageButton}" Width="400px"
+                    Command="{Binding AddImageCommand}"
+                    Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
+                    Background="{x:Null}" BorderBrush="Transparent" Cursor="Hand">
+                <Image Grid.Row="1" Source="/LearningWPF;component/Resourse/image--v2.png"/>
             </Button>
         </Grid>
-        <Label Grid.Row="2" Content="{Binding СompositionOfTheDish, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox Grid.Row="2" Text="{Binding СompositionOfTheDish, UpdateSourceTrigger=PropertyChanged}" Visibility="Collapsed"/>
-        <Label Grid.Row="3" Content="{Binding CookingMethod, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox  Grid.Row="3" Text="{Binding CookingMethod, UpdateSourceTrigger=PropertyChanged}" Visibility="Collapsed"/>
-
+        <Label Grid.Row="2" Content="{Binding SelectedRecipe.СompositionOfTheDish}"
+               FontSize="14" FontFamily="Arial"
+               Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
+        <TextBox Grid.Row="2" Text="{Binding SelectedRecipe.СompositionOfTheDish}"
+                 Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}"/>
+        <Label Grid.Row="3" Content="{Binding SelectedRecipe.CookingMethod}"
+               FontSize="14" FontFamily="Arial"
+               Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
+        <TextBox  Grid.Row="3" Text="{Binding SelectedRecipe.CookingMethod}"
+                  Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}"/>
+        <Button Style="{StaticResource EditButton}" Command="{Binding EditCommand}" 
+                CommandParameter="{Binding SelectedRecipe}"  
+                Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"
+                Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top">
+            <Image Source="edit-2653317-2202989.png" Height="16" Width="18" 
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Button>
+        <Button Style="{StaticResource SaveButton}" 
+                Width="25" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"
+                Command="{Binding SaveCommand}"
+                Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}">
+            <Image Source="Paomedia-Small-N-Flat-Floppy.ico" Height="16" Width="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Button>
     </Grid>
 </UserControl>
