--- a/LearningWPF/View/ItemsListBox.xaml
+++ b/LearningWPF/View/ItemsListBox.xaml
@@ -5,13 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LearningWPF.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="298" Width="298" Height="40">
-    <Grid Width="298" Height="40">
+             d:DesignHeight="450" d:DesignWidth="250" Width="240" Height="30">
+    <Grid Width="298" Height="30">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
-        <Image Source="/LearningWPF;component/Resourse/864685.png"/>
-        <TextBlock Grid.Column="1" FontSize="14" Text="{Binding Path=NameRecipe}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Image Source="/LearningWPF;component/Resourse/ItemList.png"/>
+        <TextBlock Grid.Column="1" FontSize="14" FontFamily="Arial" 
+                   Text="{Binding Path=NameRecipe}" 
+                   VerticalAlignment="Center" HorizontalAlignment="Left"
+                   Padding="5"/>
     </Grid>
 </UserControl>
