--- a/LearningWPF/View/ItemsListBox.xaml
+++ b/LearningWPF/View/ItemsListBox.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LearningWPF.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="250" Width="240" Height="30">
-    <Grid Width="298" Height="30">
+             Width="240" Height="30">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="5*"/>
