--- a/LearningWPF/View/RecipeView.xaml
+++ b/LearningWPF/View/RecipeView.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LearningWPF.View"
              mc:Ignorable="d" 
-             d:DesignHeight="669" d:DesignWidth="894">
+             d:DesignHeight="870" d:DesignWidth="894">
+    
     <Grid Visibility="{Binding SelectedRecipe, Converter={StaticResource SelectedRecipeConverter}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -34,23 +35,53 @@
                         TargetNullValue={StaticResource DefaultContactImage}}"/>
             </Button>
         </Grid>
-        <Label Grid.Row="2" Content="{Binding SelectedRecipe.СompositionOfTheDish}"
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.4*"/>
+                <RowDefinition Height="5*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Padding="10 0 0 0" Text="Состав" Background="White"/>
+            <Label Grid.Row="1" Content="{Binding SelectedRecipe.СompositionOfTheDish}"
                FontSize="14" FontFamily="Arial"
                Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
-        <TextBox Grid.Row="2" Text="{Binding SelectedRecipe.СompositionOfTheDish}"
+            <TextBox Grid.Row="1" Text="{Binding SelectedRecipe.СompositionOfTheDish}"
+                     AcceptsReturn="True"
+                 Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
+                     SpellCheck.IsEnabled="True"/>
+
+        </Grid>
+        <Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.4*"/>
+                <RowDefinition Height="5*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Padding="10 0 0 0" Text="Способ приготовления" Background="White"/>
+            <Label Grid.Row="1"  Content="{Binding SelectedRecipe.CookingMethod}"
+               FontSize="14" FontFamily="Arial"
+               Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
+            <TextBox Grid.Row="1"  Text="{Binding SelectedRecipe.CookingMethod}"
+                     AcceptsReturn="True"
                  Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}"/>
-        <Label Grid.Row="3" Content="{Binding SelectedRecipe.CookingMethod}"
-               FontSize="14" FontFamily="Arial"
-               Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
-        <TextBox  Grid.Row="3" Text="{Binding SelectedRecipe.CookingMethod}"
-                  Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}"/>
-        <Button Style="{StaticResource EditButton}" Command="{Binding EditCommand}" 
+        </Grid>
+        <Grid HorizontalAlignment="Right" VerticalAlignment="Top">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Button Grid.Row="0" Style="{StaticResource EditButton}" Command="{Binding EditCommand}" 
                 CommandParameter="{Binding SelectedRecipe}"  
                 Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"
                 Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top">
-            <Image Source="/LearningWPF;component/Resourse/EditImage.png" Height="16" Width="18" 
+                <Image Source="/LearningWPF;component/Resourse/EditImage.png" Height="16" Width="18" 
                    HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Button>
+            </Button>
+
+            <Button Grid.Row="1" Style="{StaticResource DeleteButton}" Width="25" Height="25" 
+                HorizontalAlignment="Right" VerticalAlignment="Top" 
+                Command="{Binding RemoveCommand}">
+            </Button>
+        </Grid>
+
         <Button Style="{StaticResource SaveButton}" 
                 Width="25" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"
                 Command="{Binding SaveCommand}"
