Add dynamic tabitem.

--- a/LearningWPF/View/BookView.xaml
+++ b/LearningWPF/View/BookView.xaml
@@ -13,8 +13,8 @@
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0">
-            <ListView ItemsSource="{Binding ViewRecipe.BookVM.RecipeVM.Recipes}" 
-                        SelectedItem="{Binding ViewRecipe.BookVM.RecipeVM.SelectedRecipe}" 
+            <ListView ItemsSource="{Binding Content.RecipeVM.Recipes}" 
+                        SelectedItem="{Binding Content.RecipeVM.SelectedRecipe}" 
                         ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                         ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <ListView.ItemTemplate>
@@ -27,11 +27,11 @@
         <Grid Grid.Column="1">
             <ContentControl>
                 <ContentControl.Content>
-                    <local:RecipeView DataContext="{Binding ViewRecipe.BookVM.RecipeVM}"/>
+                    <local:RecipeView DataContext="{Binding Content.RecipeVM}"/>
                 </ContentControl.Content>
             </ContentControl>
         </Grid>
-        <Button Command="{Binding ViewRecipe.BookVM.RecipeVM.AddCommand}" 
+        <Button Command="{Binding Content.RecipeVM.AddCommand}" 
                 Style="{StaticResource AddButton}" Width="130" Height="25" 
                 VerticalAlignment="Bottom" Content="Добавление рецепта"/>
     </Grid>
