--- a/LearningWPF/View/RecipeView.xaml
+++ b/LearningWPF/View/RecipeView.xaml
@@ -75,15 +75,9 @@
                 <Image Source="/LearningWPF;component/Resourse/EditImage.png" Height="16" Width="18" 
                    HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </Button>
-
-            <Button Grid.Row="1" Style="{StaticResource DeleteButton}" Width="25" Height="25" 
-                HorizontalAlignment="Right" VerticalAlignment="Top" 
-                Command="{Binding RemoveCommand}">
-            </Button>
         </Grid>
-
-        <Button Style="{StaticResource SaveButton}" 
-                Width="25" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"
+        <Button Style="{StaticResource DeleteButton}" 
+                Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top"
                 Command="{Binding SaveCommand}"
                 Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}">
             <Image Source="/LearningWPF;component/Resourse/SaveIcon.ico" 
